[gd_scene load_steps=15 format=3 uid="uid://dhbbbiifcgvqr"]

[ext_resource type="Script" uid="uid://w1bq1w2t1fmd" path="res://scripts/slime.gd" id="1_n6pvg"]
[ext_resource type="Texture2D" uid="uid://ft0v0r37bsim" path="res://assets/sprites/slime_green.png" id="1_p2gj0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p2gj0"]
atlas = ExtResource("1_p2gj0")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6pvg"]
atlas = ExtResource("1_p2gj0")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5wyi"]
atlas = ExtResource("1_p2gj0")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l8pv"]
atlas = ExtResource("1_p2gj0")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjw23"]
atlas = ExtResource("1_p2gj0")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2npkn"]
atlas = ExtResource("1_p2gj0")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd6lc"]
atlas = ExtResource("1_p2gj0")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gstla"]
atlas = ExtResource("1_p2gj0")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_v5wyi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2gj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6pvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5wyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l8pv")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjw23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2npkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd6lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gstla")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2gj0"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6pvg"]
size = Vector2(15, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pjw23"]
size = Vector2(11, 12)

[node name="slime" type="CharacterBody2D"]
script = ExtResource("1_n6pvg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_v5wyi")
animation = &"dead"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_p2gj0")

[node name="RayCastRight" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(9, 1)

[node name="RayCastLeft" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(-9, 1)

[node name="getDamage" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="getDamage"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_n6pvg")

[node name="killzone" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_pjw23")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="RayCastFloor" type="RayCast2D" parent="."]
target_position = Vector2(15, 15)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="getDamage" to="." method="_on_get_damage_area_entered"]
[connection signal="body_entered" from="getDamage" to="." method="_on_get_damage_body_entered"]
[connection signal="body_entered" from="killzone" to="." method="_on_killzone_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
